Free up project space

--- a/src/main/resources/templates/student/course/student_document-detail.html
+++ b/src/main/resources/templates/student/course/student_document-detail.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title th:text="${document.getTitle()}"></title>
+    <title th:text="${document.getTitle() + ' | FPT E-resources'}"></title>
     <link rel="shortcut icon" href="/images/fptUniversityLogoIcon.png" type="image/x-icon">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" th:href="@{/assets/bootstrap-dist/css/bootstrap.min.css}">
