--- a/src/main/resources/templates/student/feedback/student_feedback-add.html
+++ b/src/main/resources/templates/student/feedback/student_feedback-add.html
@@ -38,7 +38,7 @@
         }
     </style>
 
-    <title>Send feedback</title>
+    <title>Send feedback | FPT E-resources</title>
     <link rel="shortcut icon" href="/images/fptUniversityLogoIcon.png" type="image/x-icon">
 </head>
 
