--- a/src/main/resources/templates/common/login.html
+++ b/src/main/resources/templates/common/login.html
@@ -26,14 +26,14 @@
                     <!--                        <input type="password" name="password" class="auth-form__input" placeholder="Enter Password">-->
                     <!--                    </div>-->
                     <div class="auth-form__socials">
-                        <a th:href="@{/oauth2/authorization/google}"
+                        <a th:href="@{/oauth2/authorization/google}" style="height: 48px"
                            class="btn btn-login btn-primary auth-form__socials--google">
                             <i class="auth-form__socials-google-icon fab fa-google"></i>
                             <span class="auth-form__socials-title">
                         Login with FPT edu mail
                         </span>
                         </a>
-                        <a href="https://feid.fpt.edu.vn/Account/Login"
+                        <a href="https://feid.fpt.edu.vn/Account/Login" style="height: 48px"
                            class="btn btn-login btn--with-icon auth-form__socials--feid">
                             <i class="auth-form__socials-feid-icon fa-solid fa-envelope"></i>
                             <span class="auth-form__socials-title">
@@ -60,9 +60,9 @@
                     <!--                        </div>-->
                     <!--                    </div>-->
 
-                    <div class="auth-form__controls mb-5">
+                    <div class="auth-form__controls mb-5 d-flex justify-content-center">
                         <a href="/" id="closeLoginForm" class="btn btn--hover ">Back</a>
-                        <button type="submit" class="btn btn--primary auth-form__controls-login ">Login</button>
+                        <button type="submit" class="d-none btn btn--primary auth-form__controls-login ">Login</button>
                     </div>
                 </div>
             </div>
