--- a/src/main/resources/templates/student/course/student_courses.html
+++ b/src/main/resources/templates/student/course/student_courses.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Course | FPT University E-resources</title>
+    <title>Courses | FPT E-resources</title>
     <link rel="shortcut icon" href="/images/fptUniversityLogoIcon.png" type="image/x-icon">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" th:href="@{/assets/bootstrap-dist/css/bootstrap.min.css}">
