--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -8,6 +8,7 @@
     --title-color: #e12b1b;
     --border-color: #dbdbdb;
     --second-border-color: #f5f1f1;
+    --third-border-color: #c4c2c2;
     --hover-color: #5c7af3;
     --header-hover-color: #d5d5d5;
     --bg-hover-color: #e3e6fc;
