--- a/src/main/resources/templates/student/student_home.html
+++ b/src/main/resources/templates/student/student_home.html
@@ -55,24 +55,24 @@
                                 </div>
                             </div>
                             <!-- Select-find-scope -->
-                            <div class="header__search-select">
-                                <span class="header__search-select-label">          </span>
-                                <i class="header__search-select-icon fas fa-angle-down"></i>
-                                <ul class="header__search-option">
-                                    <li class="header__search-option-item header__search-option-item--active">
-                                        <span class="">All results</span>
-                                        <i class="fas fa-check"></i>
-                                    </li>
-                                    <li class="header__search-option-item">
-                                        <span class="">library</span>
-                                        <i class="fas fa-check"></i>
-                                    </li>
-                                    <li class="header__search-option-item">
-                                        <span class="">e-resources</span>
-                                        <i class="fas fa-check"></i>
-                                    </li>
-                                </ul>
-                            </div>
+<!--                            <div class="header__search-select">-->
+<!--                                <span class="header__search-select-label">          </span>-->
+<!--                                <i class="header__search-select-icon fas fa-angle-down"></i>-->
+<!--                                <ul class="header__search-option">-->
+<!--                                    <li class="header__search-option-item header__search-option-item&#45;&#45;active">-->
+<!--                                        <span class="">All results</span>-->
+<!--                                        <i class="fas fa-check"></i>-->
+<!--                                    </li>-->
+<!--                                    <li class="header__search-option-item">-->
+<!--                                        <span class="">library</span>-->
+<!--                                        <i class="fas fa-check"></i>-->
+<!--                                    </li>-->
+<!--                                    <li class="header__search-option-item">-->
+<!--                                        <span class="">e-resources</span>-->
+<!--                                        <i class="fas fa-check"></i>-->
+<!--                                    </li>-->
+<!--                                </ul>-->
+<!--                            </div>-->
                             <button class="header__search-btn">
                                 <i class="header__search-btn-icon fas fa-search"></i>
                             </button>
