--- a/src/main/resources/static/css/fragment.css
+++ b/src/main/resources/static/css/fragment.css
@@ -272,6 +272,10 @@
     align-items: center;
 }
 
+.header__navbar-user-wrap:hover {
+    color: white;
+}
+
 .header__navbar-user-appearance:hover .header__navbar-user-option-list {
     display: block;
 }
@@ -632,7 +636,7 @@
     width: 60px;
     border: none;
     border-radius: 18px;
-    margin: 0 2px;
+    margin: 1px 2px 0 0;
     cursor: pointer;
     transition: background-color 0.5s ease;
 }
