--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -316,7 +316,7 @@
                                     class="header__navbar-user-role">(Student)</span>
 
                             </div>
-                            <div class="header__navbar-user-option-list header__bridge">
+                            <div th:unless="${loggedInUser.role.toString() eq 'STUDENT'}" class="header__navbar-user-option-list header__bridge">
                                 <div class="header__navbar-user-profile">
                                     <div class="header__navbar-user-profile-img-wrapper">
                                         <img th:src="@{/images/role_avatar/student.png}" alt=""
@@ -327,14 +327,9 @@
                                         <p th:text="${loggedInUser.dateOfBirth}"></p>
                                     </div>
                                 </div>
-                                <div class="student__log-out" th:unless="${loggedInUser.role.toString() eq 'STUDENT'}">
+                                <div class="student__log-out">
                                     <a th:href="@{/}">
                                         Back to dashboard
-                                    </a>
-                                </div>
-                                <div class="student__log-out">
-                                    <a th:href="@{/logout}">
-                                        Log out
                                     </a>
                                 </div>
                             </div>
