--- a/src/main/resources/templates/student/feedback/student_feedback-add.html
+++ b/src/main/resources/templates/student/feedback/student_feedback-add.html
@@ -24,6 +24,10 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 
+    <!-- SweetAlert từ CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.min.css">
     <style>
         label.error {
             margin-top: 5px;
@@ -34,7 +38,8 @@
         }
     </style>
 
-    <title>Send feedback</title>
+    <title>Send feedback | FPT E-resources</title>
+    <link rel="shortcut icon" href="/images/fptUniversityLogoIcon.png" type="image/x-icon">
 </head>
 
 <body class="app_container">
@@ -55,7 +60,7 @@
                                 <div class="form h-100">
                                     <h3>Send feedback</h3>
                                     <form class="mb-5" th:action="@{/student/feedbacks/add}" method="post"
-                                          th:object="${feedback}">
+                                          th:object="${feedback}" id="form-feedback">
                                         <div class="row">
                                             <div class="col-md-4 form-group mb-5">
                                                 <label for="name" class="col-form-label">Name</label>
@@ -77,40 +82,49 @@
 
                                         <div class="row">
                                             <div class="col-md-12 form-group mb-5">
-                                                <label class="col-form-label">How was your experience with the E-resource site? </label>
+                                                <label class="col-form-label">How was your experience with the
+                                                    E-resource site? </label>
                                                 <div class="emoji">
                                                     <div class="container">
                                                         <div class="item">
                                                             <label for="0">
-                                                                <input th:field="*{feedbackEmotion}" class="radio" type="radio" name="feedback" id="0" value="Bad">
+                                                                <input th:field="*{feedbackEmotion}" class="radio"
+                                                                       type="radio" name="feedback" id="0" value="Bad">
                                                                 <span>🤬</span>
                                                             </label>
                                                         </div>
 
                                                         <div class="item">
                                                             <label for="1">
-                                                                <input th:field="*{feedbackEmotion}" class="radio"  type="radio" name="feedback" id="1" value="Good">
+                                                                <input th:field="*{feedbackEmotion}" class="radio"
+                                                                       type="radio" name="feedback" id="1" value="Good">
                                                                 <span>🙁</span>
                                                             </label>
                                                         </div>
 
                                                         <div class="item">
                                                             <label for="2">
-                                                                <input th:field="*{feedbackEmotion}" class="radio" type="radio" name="feedback" id="2" value="Very Good">
+                                                                <input th:field="*{feedbackEmotion}" class="radio"
+                                                                       type="radio" name="feedback" id="2"
+                                                                       value="Very Good">
                                                                 <span>😶</span>
                                                             </label>
                                                         </div>
 
                                                         <div class="item">
                                                             <label for="3">
-                                                                <input th:field="*{feedbackEmotion}" class="radio" type="radio" name="feedback" id="3" value="Satisfied">
+                                                                <input th:field="*{feedbackEmotion}" class="radio"
+                                                                       type="radio" name="feedback" id="3"
+                                                                       value="Satisfied">
                                                                 <span>😁</span>
                                                             </label>
                                                         </div>
 
                                                         <div class="item">
                                                             <label for="4">
-                                                                <input th:field="*{feedbackEmotion}" class="radio" type="radio" name="feedback" id="4" value="Very Satisfied">
+                                                                <input th:field="*{feedbackEmotion}" class="radio"
+                                                                       type="radio" name="feedback" id="4"
+                                                                       value="Very Satisfied">
                                                                 <span>😍</span>
                                                             </label>
                                                         </div>
@@ -120,12 +134,13 @@
 
                                             </div>
                                         </div>
-                                        <input type="hidden" th:value="Pending" th:field="*{status}" >
+                                        <input type="hidden" th:value="Pending" th:field="*{status}">
 
                                         <!-- Feedback Content Field -->
                                         <div class="row">
                                             <div class="col-md-12 form-group mb-5">
-                                                <label for="feedbackContent" class="col-form-label">Do you have message for us? *</label>
+                                                <label for="feedbackContent" class="col-form-label">Do you have message
+                                                    for us? *</label>
                                                 <textarea class="form-control" th:field="*{feedbackContent}"
                                                           id="feedbackContent" cols="30" rows="4"
                                                           placeholder="Write your feedback"></textarea>
@@ -163,7 +178,7 @@
                                         </li>
                                         <li class="d-flex">
                                             <span class="wrap-icon icon-envelope mr-3"></span>
-                                            <span class="text">ers@mywebsite.com</span>
+                                            <span class="text">eresource.site</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -182,7 +197,10 @@
 <div th:replace="~{fragments/footer :: footerSection}"></div>
 
 <!--jquery-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
 <!--Bootstrap script-->
 <script th:src="@{/assets/bootstrap-dist/js/bootstrap.bundle.min.js}"
@@ -194,6 +212,25 @@
 <script th:inline="javascript">
     var btn1 = document.querySelector('#green');
     var btn2 = document.querySelector('#red');
+
+
+    var successParam = [[${param.success}]];
+    if (successParam) {
+        Swal.fire(
+            'Success!',
+            'Send feedback successful!',
+            'success'
+        );
+    }
+
+    var errorParam = [[${param.error}]];
+    if (errorParam) {
+        Swal.fire(
+            'Error!',
+            'Please check feedback information again!',
+            'error'
+        );
+    }
 </script>
 
 </body>
