--- a/src/main/resources/templates/student/student_notifications.html
+++ b/src/main/resources/templates/student/student_notifications.html
@@ -69,7 +69,7 @@
                                         <span class="header__notify-name"
                                               th:text="${notification.notificationContent}"></span>
                                         <span class="header__notify-description"
-                                              th:text="${notification.lastModifiedDate}">
+                                              th:text="${#temporals.format(notification.lastModifiedDate, 'dd-MM-yyyy HH:mm:ss')}">
                                         </span>
                                     </div>
                                 </a>
