--- a/src/main/resources/templates/lecturer/lecturer_notifications.html
+++ b/src/main/resources/templates/lecturer/lecturer_notifications.html
@@ -61,7 +61,7 @@
                                         <span class="header__notify-name"
                                               th:text="${notification.notificationContent}"></span>
                                         <span class="header__notify-description"
-                                              th:text="${#temporals.format(notification.lastModifiedDate, 'dd-MM-yyyy HH:mm:ss')}">
+                                              th:text="${notification.lastModifiedDate}">
                                         </span>
                                     </div>
                                 </a>
